# feeble-machine

./: .gitignore  README.md
anchor/: Anchor.toml  package.json
anchor/programs/feeble-machine/: Cargo.toml
anchor/programs/feeble-machine/src/: lib.rs
anchor/programs/feeble-machine/src/instructions/: init_machine.rs  mint.rs  mod.rs  toggle_lock.rs  update_machine.rs  update_whitelist.rs  whitelist_set_mint_limit.rs  whitelist_user.rs
anchor/programs/feeble-machine/src/state/: feeble_machine.rs  mint_status.rs  mod.rs  whitelist.rs
anchor/tests/: main.ts
cli/: package.json  tsconfig.json
cli/src/: index.ts  init.ts  test_manifest.ts  toggle_lock.ts  types.ts  update.ts  utils.ts  verify_manifest.ts  whitelist.ts
