[package]
name = "feeble-machine"
version = "0.1.0"
description = ""
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "feeble_machine"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
bitflags = "1.3.2"
bytemuck = "1.7.2"
static_assertions = "1.1.0"
thiserror = "1.0.30"
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.2.10", features = ["no-entrypoint"] }
spl-token = "^3.2.0"
spl-associated-token-account = "1.0.3"
arrayref = "0.3.6"